--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/proxy": "^2.1.0",
     "pinia": "^2.1.3",
     "vue": "^3.3.4"
   },
